# maybe-async-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.org  build.rs
.github/workflows/: linux.yml
examples/: service_client.rs
src/: lib.rs  parse.rs  visit.rs
tests/: test.rs  unit-test-util.rs  unit_test_util.rs
tests/ui/: 01-maybe-async.rs  02-must-be-async.rs  03-must-be-sync.rs  07-impl-future-rpit.rs
tests/ui/test_fail/: 04-bad-sync-cond.rs  04-bad-sync-cond.stderr
