[package]
name = "maybe-async"
version = "0.1.1"
authors = ["Guoli Lyu <guoli-lv@hotmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "A procedure macro to unify SYNC and ASYNC implementation"
repository = "https://github.com/guoli-lyu/maybe-async-rs"
documentation = "https://docs.rs/maybe-async"
keywords = ["maybe", "async", "futures", "macros", "proc_macro"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["visit-mut"] }

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "guoli-lyu/maybe-async", branch = "master" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
trybuild = { version = "1.0.19", features = ["diff"] }
async-trait = "0.1"

[features]
default = []

is_sync = []
